refactor: thanos snap

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,1 @@
-## Training dir
-ckpt/
-log/
-testImages/
-
-## model
-*.h5
-*.data-*
-saved_model/PaintsTensorFlowDraftModel/
-saved_model/PaintsTensorFlowModel/
-GUI/src/saved_model/
-GUI/src/saved_model/PaintsTensorFlowDraftModel/
-GUI/src/saved_model/PaintsTensorFlowModel/
-GUI/src/saved_model/Liner/
-
-
-
-chekpoint
-*.meta
-
-## etc
-/__pycache__
-/venv*
-/.idea
-/GUI/model/
-test.py
-Test/
+DATASET
