--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,7 @@
-absl-py==1.0.0
-albumentations==1.1.0
-astroid==2.9.3
-astunparse==1.6.3
-attrs==21.4.0
-bcrypt==3.2.0
-black==22.1.0
-blessings==1.7
-cachetools==5.0.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.4
-cryptography==36.0.1
-dill==0.3.4
-distro==1.7.0
-docker==5.0.3
-docker-compose==1.29.2
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-fire==0.4.0
-flake8==4.0.1
-flatbuffers==2.0
-gast==0.5.3
-gitdb==4.0.9
-GitPython==3.1.27
-google-auth==2.6.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-googleapis-common-protos==1.55.0
-gpustat==0.6.0
-grpcio==1.44.0
-h5py==3.6.0
-idna==3.3
-imageio==2.16.1
-importlib-metadata==4.11.2
-isort==5.10.1
-joblib==1.1.0
-jsonschema==3.2.0
-keras==2.8.0
-Keras-Preprocessing==1.1.2
-keras2onnx==1.7.0
-lazy-object-proxy==1.7.1
-libclang==13.0.0
-Markdown==3.3.6
-mccabe==0.6.1
-mypy-extensions==0.4.3
-networkx==2.7
-numpy==1.22.2
-nvidia-ml-py3==7.352.0
-oauthlib==3.2.0
-onnx==1.11.0
-onnxconverter-common==1.9.0
-opencv-python-headless==4.5.5.62
-opt-einsum==3.3.0
-packaging==21.3
-paramiko==2.9.2
-pathspec==0.9.0
-pathtools==0.1.2
-Pillow==9.0.1
-platformdirs==2.5.1
-promise==2.3
-protobuf==3.19.4
-psutil==5.9.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.8.0
-pycparser==2.21
-pyflakes==2.4.0
-pylint==2.12.2
-PyNaCl==1.5.0
-pyparsing==3.0.7
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-PyWavelets==1.2.0
-PyYAML==5.4.1
-qudida==0.0.4
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-scikit-image==0.19.2
-scikit-learn==1.0.2
+tensorflow==2.7.1
+tensorflow-addons==0.16.1 
+opencv-python-headless==4.5.5.62 
+albumentations==1.1.0 
 scipy==1.8.0
-sentry-sdk==1.5.7
-setproctitle==1.2.2
-shortuuid==1.0.8
-six==1.16.0
-smmap==5.0.0
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-addons==0.16.1
-tensorflow-datasets==4.5.2
-tensorflow-io-gcs-filesystem==0.24.0
-tensorflow-metadata==1.7.0
-termcolor==1.1.0
-texttable==1.6.4
-tf-estimator-nightly==2.8.0.dev2021122109
-threadpoolctl==3.1.0
-tifffile==2022.2.9
-toml==0.10.2
-tomli==2.0.1
-tqdm==4.63.0
-typeguard==2.13.3
-typing_extensions==4.1.1
-urllib3==1.26.8
+tqdm
 wandb==0.12.11
-websocket-client==0.59.0
-Werkzeug==2.0.3
-wrapt==1.13.3
-yaspin==2.1.0
-zipp==3.7.0
