--- a/.github/workflows/PR_TEST.yaml
+++ b/.github/workflows/PR_TEST.yaml
@@ -1,4 +1,5 @@
 name: PR TEST
+
 on:
   push:
     branches: [main]
@@ -13,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout repo source code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
