--- a/.github/workflows/PR_TEST.yaml
+++ b/.github/workflows/PR_TEST.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install python dependency
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-testmon flake8 black
+          pip install pytest pytest-testmon flake8 black easydict
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       # Runs a set of commands using the runners shell
